--- a/MinFangst/MFBlogEntryCell.xib
+++ b/MinFangst/MFBlogEntryCell.xib
@@ -150,7 +150,7 @@
 							<object class="IBUILabel" id="1002703450">
 								<reference key="NSNextResponder" ref="288785091"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{232, 38}, {68, 21}}</string>
+								<string key="NSFrame">{{216, 38}, {68, 21}}</string>
 								<reference key="NSSuperview" ref="288785091"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="35192559"/>
@@ -317,21 +317,21 @@
 							<reference ref="1002703450"/>
 							<reference ref="76186068"/>
 							<reference ref="668601795"/>
-							<object class="IBNSLayoutConstraint" id="383062698">
-								<reference key="firstItem" ref="629324770"/>
+							<object class="IBNSLayoutConstraint" id="76603064">
+								<reference key="firstItem" ref="1002703450"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1002703450"/>
+								<reference key="secondItem" ref="98048267"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">20</double>
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="629324770"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
-								<int key="contentType">3</int>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="772678927">
 								<reference key="firstItem" ref="1002703450"/>
@@ -365,7 +365,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="503701755">
+							<object class="IBNSLayoutConstraint" id="441084572">
 								<reference key="firstItem" ref="629324770"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -413,7 +413,23 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="563153043">
+							<object class="IBNSLayoutConstraint" id="482401092">
+								<reference key="firstItem" ref="98048267"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="76186068"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">8</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="629324770"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="74278649">
 								<reference key="firstItem" ref="98048267"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -429,23 +445,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="97984494">
-								<reference key="firstItem" ref="98048267"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="629324770"/>
-								<int key="secondAttribute">3</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">67</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="629324770"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="693322566">
+							<object class="IBNSLayoutConstraint" id="341870817">
 								<reference key="firstItem" ref="98048267"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -459,22 +459,6 @@
 								<reference key="containingView" ref="629324770"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="482401092">
-								<reference key="firstItem" ref="98048267"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="76186068"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="629324770"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="413684374">
@@ -507,6 +491,22 @@
 								<reference key="containingView" ref="629324770"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="515589049">
+								<reference key="firstItem" ref="76186068"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="629324770"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">38</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="629324770"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="728638406">
@@ -581,7 +581,7 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="98048267"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="48081714">
+							<object class="IBNSLayoutConstraint" id="684203465">
 								<reference key="firstItem" ref="98048267"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -740,11 +740,6 @@
 						<reference key="parent" ref="629324770"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">17</int>
-						<reference key="object" ref="482401092"/>
-						<reference key="parent" ref="629324770"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
 						<reference key="object" ref="174615889"/>
 						<reference key="parent" ref="629324770"/>
@@ -785,11 +780,6 @@
 						<reference key="parent" ref="44058758"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="383062698"/>
-						<reference key="parent" ref="629324770"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
 						<reference key="object" ref="167369964"/>
 						<reference key="parent" ref="629324770"/>
@@ -801,27 +791,37 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">53</int>
-						<reference key="object" ref="48081714"/>
+						<reference key="object" ref="684203465"/>
 						<reference key="parent" ref="98048267"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">54</int>
-						<reference key="object" ref="693322566"/>
+						<reference key="object" ref="341870817"/>
 						<reference key="parent" ref="629324770"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">67</int>
-						<reference key="object" ref="503701755"/>
-						<reference key="parent" ref="629324770"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">68</int>
-						<reference key="object" ref="97984494"/>
+						<reference key="object" ref="441084572"/>
 						<reference key="parent" ref="629324770"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">70</int>
-						<reference key="object" ref="563153043"/>
+						<reference key="object" ref="74278649"/>
+						<reference key="parent" ref="629324770"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">86</int>
+						<reference key="object" ref="515589049"/>
+						<reference key="parent" ref="629324770"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">122</int>
+						<reference key="object" ref="482401092"/>
+						<reference key="parent" ref="629324770"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">155</int>
+						<reference key="object" ref="76603064"/>
 						<reference key="parent" ref="629324770"/>
 					</object>
 				</array>
@@ -834,41 +834,41 @@
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="122.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="155.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">MFBlogEntryCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="2.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="2.IBViewMetadataConstraints">
 					<reference ref="508055474"/>
 					<reference ref="992450882"/>
 					<reference ref="167369964"/>
 					<reference ref="728638406"/>
+					<reference ref="515589049"/>
 					<reference ref="295122138"/>
 					<reference ref="413684374"/>
+					<reference ref="341870817"/>
+					<reference ref="74278649"/>
 					<reference ref="482401092"/>
-					<reference ref="693322566"/>
-					<reference ref="97984494"/>
-					<reference ref="563153043"/>
 					<reference ref="174615889"/>
 					<reference ref="931802737"/>
-					<reference ref="503701755"/>
+					<reference ref="441084572"/>
 					<reference ref="564457900"/>
 					<reference ref="772678927"/>
-					<reference ref="383062698"/>
+					<reference ref="76603064"/>
 				</array>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="3.IBViewMetadataConstraints">
-					<reference ref="48081714"/>
+					<reference ref="684203465"/>
 				</array>
 				<boolean value="NO" key="3.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -887,7 +887,6 @@
 				</array>
 				<boolean value="NO" key="6.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="68.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array key="7.IBViewMetadataConstraints">
 					<reference ref="328259874"/>
@@ -900,13 +899,14 @@
 					<reference ref="982144355"/>
 				</array>
 				<boolean value="NO" key="8.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
+				<string key="86.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">70</int>
+			<int key="maxID">155</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
